@@ -60,7 +60,6 @@
 #include "tkPort.h"
 #include "tkInt.h"
 #include "tkMacOSXInt.h"
-#include <errno.h>
 #include "tkScrollbar.h"
 
 /*
